Fix contact form scrollbar
- Add scrolling="no" to iframe
- Increase min-height to 600px
- Add overflow: hidden

--- a/assets/scss/pages/contact/_contact.scss
+++ b/assets/scss/pages/contact/_contact.scss
@@ -64,10 +64,11 @@
 
   iframe {
     width: 100%;
-    min-height: 500px;
+    min-height: 600px;
     border: none;
     display: block;
     border-radius: 9px;
+    overflow: hidden;
   }
 }
 
